# quick-build-go-project

./: Cargo.toml  LICENSE  README.md
project_structure_example/api/: main.go
release/: quick-build-go-project
src/: main.rs
src/args/: args.rs
src/cmd/: cmd.rs
src/configs/: config.yaml  configs.rs
src/handle_file/: handle_file.rs  mod.rs
src/template_go/: mod.rs  template_gin_go.rs  template_go.rs
