[package]
name = "quick-build-go-project"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "quickly build go project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "3.0.7", features = ["derive"] }
